--- a/.github/workflows/cobrinha.yml
+++ b/.github/workflows/cobrinha.yml
@@ -1,8 +1,8 @@
-name: Generate Datas
+name: Gera cobrinha
 
 on:
   schedule: # execute every 12 hours
-    - cron: "* */12 * * *"
+    - cron: "* * * * 0"
   workflow_dispatch:
 
 jobs:
