--- a/.github/workflows/cobrinha.yml
+++ b/.github/workflows/cobrinha.yml
@@ -2,7 +2,7 @@ name: Gera cobrinha
 
 on:
   schedule: # execute every 12 hours
-    - cron: "* * * * 0"
+    - cron: "59 23 * * 0"
   workflow_dispatch:
 
 jobs:
